Externalise Pi4J FFM reachability metadata to pi4j-ffm-metadata-bookworm-graal25
Move GraalVM reachability metadata for Pi4J FFM downcalls from a hand-rolled
src/main/resources/META-INF/native-image/ JSON to the external artifact
dev.lofthouse.pi4j:pi4j-ffm-metadata-bookworm-graal25:4.0.0-1 (from the
pi4j-graalvm-metadata project). The agent-captured artifact covers 21 unique
downcall shapes; the manual JSON covered only 8 and was incomplete.

Native image build now reports 17 downcalls registered (vs. 8 previously).
MissingForeignRegistrationError resolved. Both JVM and native modes verified
working on BlackRaspberry.

Updated CLAUDE.md and PI4J-NATIVE-IMAGE-ISSUE.md to reflect the resolution.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>